# EMC-Lib

./: .gitignore  CMakeLists.txt  EMC.h  README.md  build.sh  example_main.cpp  main.cpp  run.sh  run_my_pc.sh  run_triolith.sh  run_triolith_debug.sh  test.cpp
source/: DNA.cpp  DNA.hpp  EMC.cpp  EMC.h  constants.cpp  constants.hpp  datafiles.cpp  datafiles.hpp  evolution.cpp  evolution.hpp  mymath.cpp  mymath.hpp  objective_function.cpp  objective_function.hpp  parallel_algorithms.cpp  parallel_algorithms.h  personality.cpp  personality.hpp  population.cpp  population.hpp  randomFunctions.cpp  randomFunctions.hpp  species.cpp  species.hpp
